HHH-19894 : Use Java 25 for CI builds